# mandelbrot

./: .gitignore  LICENSE  README.md
benchmark/: benchmark.xlsx
cpu/: .gitignore  CMakeLists.txt
cpu/lib/: libbmp.h
cpu/src/: common.h  fixed_point.h  image.c  main.c  mandelbrot.c  mandelbrot.h
fpga/ece423_prefab/lab_prefab/: lab_prefab_wrapper.xsa
fpga/ece423_prefab/lab_prefab/lab_prefab.runs/impl_1/: lab_prefab_wrapper.bit
fpga/ip_block/source/: mandelbrot.c  mandelbrot.h
fpga/ip_block/testbench/: mandelbrot_test.c
fpga/mandelbrot/src/: fixed_point.h  lscript.ld  main.c  mandelbrot.c  mandelbrot.h
fpga/mandelbrot/src/common/: mjpeg423_types.h  util.h
fpga/mandelbrot/src/ece423_vid_ctl/: ece423_vid_ctl.c  ece423_vid_ctl.h
gpu/: CMakeLists.txt
gpu/src/: image.cu  image.cuh  main.cu  mandelbrot.cu  mandelbrot.cuh
